--- a/Anchor.toml
+++ b/Anchor.toml
@@ -1,12 +1,19 @@
+[toolchain]
+anchor_version = "0.29.0"
+solana_version = "1.16.20"
+
+[features]
+seeds = false
+skip-lint = false
+
 [programs.localnet]
-spl_token_faucet = "4sN8PnN2ki2W4TFXAfzR645FWs8nimmsYeNtxM8RBK6A"
+spl_faucet = "GLAiyTqs45dw1Nm1WtxLYorPaE9j38EP1T3CJaf1AuQX"
 
 [registry]
-url = "https://anchor.projectserum.com"
+url = "https://api.apr.dev"
 
 [provider]
-cluster = "localnet"
+cluster = "Localnet"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
-test = "ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
