--- a/package.json
+++ b/package.json
@@ -1,13 +1,32 @@
 {
-    "dependencies": {
-        "@project-serum/anchor": "^0.18.0",
-        "@solana/spl-token": "^0.1.8"
-    },
-    "devDependencies": {
-        "@types/mocha": "^9.0.0",
-        "chai": "^4.3.4",
-        "mocha": "^9.0.3",
-        "ts-mocha": "^8.0.0",
-        "typescript": "^4.3.5"
-    }
+  "name": "@stabbleorg/spl-faucet",
+  "version": "0.3.0",
+  "license": "MIT",
+  "main": "./dist/src/index.js",
+  "types": "./dist/src/index.d.ts",
+  "files": [
+    "dist",
+    "src",
+    "README.md"
+  ],
+  "scripts": {
+    "clean": "rm -rf dist",
+    "build": "yarn clean && tsc",
+    "lint:ts": "prettier */*.js \"*/**/*{.js,.ts}\" -w",
+    "lint:rs": "rustfmt programs/**/src/lib.rs",
+    "lint": "yarn lint:ts && yarn lint:rs"
+  },
+  "dependencies": {
+    "@coral-xyz/anchor": "^0.29.0",
+    "@solana/spl-token": "^0.3.9",
+    "@solana/web3.js": "^1.87.6",
+    "bn.js": "^5.2.1"
+  },
+  "devDependencies": {
+    "@types/bn.js": "^5.1.5",
+    "@types/node": "^20.10.0",
+    "prettier": "^3.1.0",
+    "rustfmt": "^0.1.0",
+    "typescript": "^5.3.0"
+  }
 }
