--- a/programs/spl-faucet/Cargo.toml
+++ b/programs/spl-faucet/Cargo.toml
@@ -1,19 +1,20 @@
 [package]
-name = "spl-token-faucet"
-version = "0.1.0"
+name = "spl-faucet"
+version = "0.3.0"
 description = "Created with Anchor"
-edition = "2018"
+edition = "2021"
 
 [lib]
 crate-type = ["cdylib", "lib"]
-name = "spl_token_faucet"
+name = "spl_faucet"
 
 [features]
 no-entrypoint = []
 no-idl = []
+no-log-ix-name = []
 cpi = ["no-entrypoint"]
 default = []
 
 [dependencies]
-anchor-lang = "0.18.2"
-anchor-spl = "0.18.0"
+anchor-lang = "0.29.0"
+anchor-spl = "0.29.0"
